--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,12 +80,12 @@
   tr,
   p,
   a {
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-family: 'Arial', Verdana, Helvetica, sans-serif;
     font-size: 14px
   }
 
   strong {
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-family: 'Arial', Verdana, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 600
   }
@@ -95,7 +95,7 @@
   }
 
   heading {
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-family: 'Arial', Verdana, Helvetica, sans-serif;
     font-size: 22px;
     /*color: #313164;*/
     text-decoration: underline;
@@ -105,13 +105,13 @@
   }
 
   papertitle {
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-family: 'Arial', Verdana, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 500
   }
 
   name {
-    font-family: 'Lato', Verdana, Helvetica, sans-serif;
+    font-family: 'Arial', Verdana, Helvetica, sans-serif;
     font-size: 32px;
   }
 
